# PasswordManager

./: .gitignore  Cargo.toml  data.txt  installer.iss
src/: build.rs  lib.rs  main.rs
ui/: appwindow.slint  page.slint  sidebar.slint
