[package]
name = "passwort_manager_slint"
version = "0.1.0"
authors = ["Tom Paßberg"]
edition = "2021"
build = "src/build.rs"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "todo"

[build-dependencies]
slint-build = "1.4.1" 

[dependencies]
slint = "1.4.1"
copypasta = "0.10.1"
magic-crypt = "3.1.13"
